To improve the HTML structure, I added a container with sections for hours, minutes, and seconds. Each time unit is now displayed alongside its respective 'hrs', 'min', or 'sec' label, using semantic HTML and specific classes for better styling.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Digital Clock</title>
   </head>
   <body>
+    <div class="container">
+      <div>
+        <span id="hours" class="time-display">00</span>
+        <span class="time-unit">hrs</span>
+      </div>
+      <div>
+        <span id="minutes" class="time-display">00</span>
+        <span class="time-unit">min</span>
+      </div>
+      <div>
+        <span id="seconds" class="time-display">00</span>
+        <span class="time-unit">sec</span>
+      </div>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
