Style: Capitalize units for hours, minutes, and seconds.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <div class="container">
       <div>
         <span id="hours" class="time-display">00</span>
-        <span class="time-unit">hrs</span>
+        <span class="time-unit">Hrs</span>
       </div>
       <div>
         <span id="minutes" class="time-display">00</span>
-        <span class="time-unit">min</span>
+        <span class="time-unit">Min</span>
       </div>
       <div>
         <span id="seconds" class="time-display">00</span>
-        <span class="time-unit">sec</span>
+        <span class="time-unit">Sec</span>
       </div>
     </div>
     <script src="scripts.js"></script>
